static/style.css
html {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.uk-offcanvas-content {
    flex: 1 0 auto;
}

.uk-background-secondary .uk-navbar-dropdown-nav .uk-active a {
    color: white !important;
}

.uk-background-secondary .uk-navbar-dropdown-nav .uk-nav-header {
    color: #666 !important;
    text-transform: none !important;
    font-weight: bold !important;
    font-size: 120% !important;
    padding: 0 !important;
}
.uk-background-secondary .uk-navbar-dropdown-nav .uk-nav-header.uk-active {
    color: white !important;
}

.uk-background-secondary .uk-navbar-dropbar {
    background: #222222 !important;
}

.uk-navbar-container,
.uk-sticky-placeholder,
.uk-navbar-nav > li > a,
.uk-navbar-left > a{
    height: 70px;
}

.navbar-logo{
    margin-left: -10px;
    padding-left: 3px;
    margin-top: 2px;
    height: 60%
}

.uk-navbar-dropdown {
    top: 45px !important;
}

.hover-title a {
    visibility: hidden;
    opacity: 0;

    transition: opacity 200ms ease-in-out;
    -moz-transition: opacity 200ms ease-in-out;
    -webkit-transition: opacity 200ms ease-in-out;
}

.hover-title:hover a {
    visibility: visible;
    opacity: 1;

    transition: opacity 200ms ease-in-out;
    -moz-transition: opacity 200ms ease-in-out;
    -webkit-transition: opacity 200ms ease-in-out;
}

.uk-article-title {
    margin-bottom: 0 !important;
}

.uk-article-meta {
    margin-top: 0 !important;
}

.uk-section {
    padding-top: 20px;
    padding-bottom: 30px;
}

.uk-heading-divider .uk-article-meta {
    margin-bottom: 0;
}

img.uk-border-rounded {
    border: 1px #25292f solid;
}

footer {
    flex-shrink: 0;
}

footer div.uk-section {
    padding: 0 0 0 0;
}

footer div.uk-section div.uk-text-center {
    margin-top: 20px;
}

.uk-button-darkish {
    background: rgba(0, 0, 0, 0.11);
    border: 1px solid rgba(34, 34, 34, 0.09);
}

.uk-button-darkish:hover {
    background: rgba(0, 0, 0, 0.22);
}

/* Flash of Unstyled Content fixes */
.prevent_fouc {
    display: none;
}

.uk-navbar-container {
    padding-left: 40px;
    padding-right: 40px;
}

/* Rendered document fixes */
.document li p {
    margin-bottom: 0;
}

/* Styling for Partners page cards */
div#partner-cards div.uk-card-default {
    margin-top: 2em;
    text-align:center;
}

/* Resize navbar to correct proportions */
img.navbar-logo {
    max-width: 110%;
}

